tests/snapshots/spanshot_request@2760769522256642595.snap
---
source: tests/trace_solver.rs
description: "RuleOptions { ref_on_ref: AllocTemporary, mut_on_ref: ResetBindingMode, allow_ref_pat_on_ref_mut: true, simplify_expressions: true }"
---
Query: `mut x: &T`

mut x @ p: &T

// Final bindings:
let mut x: &T = p
