tests/snapshots/spanshot_request@279075411588636201.snap
---
source: tests/trace_solver.rs
info:
  options:
    ref_on_ref: AllocTemporary
    mut_on_ref: Keep
    allow_ref_pat_on_ref_mut: true
    simplify_expressions: true
    eat_two_layers: false
    eat_inherited_ref_alone: true
  request: "[ref x]: &mut [T]"
---
[ref x] @ p: &mut [T]
// Applying rule `ConstructorRef`
ref x @ &mut (*p).0: &mut T
// Applying rule `Binding`
x @ &&mut (*p).0: &&mut T

// Final bindings (simplified):
let x: &&mut T = &&mut (*p).0
